# cardshop

./: .dockerignore  .env.example  .env.production.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/accounts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/admin_console/: admin.py  apps.py  audit.py  dashboard.py  inventory.py  models.py  order_actions.py  permissions.py  serializers.py  urls.py  views.py
backend/admin_console/migrations/: 0001_initial.py
backend/config/: logging_context.py  middleware.py  settings.py  urls.py
backend/orders/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_initial.py
backend/payments/: alipay.py  apps.py  easypay.py  gateway.py  urls.py  views.py
backend/shop/: admin.py  apps.py  codex_import.py  crypto.py  models.py  services.py  urls.py  views.py
backend/shop/management/commands/: seed_demo.py
backend/shop/migrations/: 0001_initial.py  0002_alter_cardsecret_status.py
backend/templates/admin/shop/: codex_import.html  guide.html  import_cards.html
backend/tests/: test_admin_console_access.py  test_admin_console_inventory.py  test_admin_console_order_actions.py  test_admin_console_read_api.py  test_admin_console_users_content.py  test_codex_import.py  test_database_and_seed_config.py  test_logging_context.py  test_order_flow.py  test_request_logging.py
frontend/: Dockerfile  index.html  package.json  (+2 more)
(+34 files in other folders)
